cabal-version:       >=1.10
name:                cherry-core
version:             0.1.0.0
synopsis:            The core library for Cherry Haskell.
description:         The core library for Cherry Haskell. For effect handling and logging, see cherry-effect.
license:             BSD3
license-file:        LICENSE
author:              Tereza Sokol
maintainer:          terezasokol@gmail.com
copyright:           Tereza Sokol
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/cherry-haskell/cherry-core

library
  exposed-modules:
    Cherry.Prelude,
    Array,
    Basics,
    Bitwise,
    Char,
    Debug,
    Dict,
    List,
    Maybe,
    Result,
    Set,
    Text,
    Tuple
  other-modules:
    Internal.Shortcut
  default-extensions:
    OverloadedStrings,
    NoImplicitPrelude
  other-extensions:
    RankNTypes
  build-depends:
    base >=4.12 && <4.13,
    text >=1.2 && <1.3,
    containers >=0.6 && <0.7,
    vector >=0.12 && <0.13
  hs-source-dirs:      src
  default-language:    Haskell2010
