cabal-version:       >=1.10
name:                Example
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Tereza Sokol
maintainer:          terezasokol@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Example
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13, HTTP, safe-exceptions, cherry-core, text, time
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings, NoImplicitPrelude
  default-language:    Haskell2010
