cabal-version:       >=1.10
name:                Logging
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Tereza Sokol
maintainer:          terezasokol@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Logging
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13, cherry-core, HTTP
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
